--- a/3iL/games/trashgame/trashgame.css
+++ b/3iL/games/trashgame/trashgame.css
@@ -12,7 +12,7 @@
 #character {
   width: 80px;
   height: 80px;
-  
+
   position: absolute;
   bottom: 0;
   left: 50%;
@@ -20,15 +20,14 @@
 }
 .item {
   width: 60px;
-  height: 60px; 
+  height: 60px;
   background-size: cover;
   position: absolute;
-  
 }
 .dangerous {
   width: 60px;
   height: 60px;
-  background-image: url('../../public/img/garot.svg');
+  background-image: url("../../publice/img/garot.svg");
   background-size: cover;
   position: absolute;
 }
