--- a/3iL/pages/contact.css
+++ b/3iL/pages/contact.css
@@ -1,10 +1,24 @@
+@import url("../global.css");
+
 .container {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center; /* Centrer les cartes horizontalement */
 }
-
+.boutonRetour{
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    width: 20%;
+    border-radius: 10px;
+    background-color: var(--clr-bgcolor);
+    font-family: var(--fnt-font-contenu);
+    display: flex;
+    justify-content: center;
+    font-size: 110%;
+}
 .carte-contact {
     background: rgba( 255, 255, 255, 0.3 );
     box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
