--- a/3iL/homepage/index.css
+++ b/3iL/homepage/index.css
@@ -460,8 +460,17 @@ z-index: -10;
   .carte2{
     display: flex;
   }
+  
 
 
+}
+
+@media only screen and (max-width: 992px) {
+  .footer{
+    width: 90vw;
+  }
+  
+  
 }
 
 .dropdown-acces-2{
